[gd_scene load_steps=5 format=3 uid="uid://v55jgofobus"]

[ext_resource type="Texture2D" uid="uid://b838wfd7gt6oq" path="res://assets/icons/hearts.png" id="1_4fp27"]
[ext_resource type="Script" path="res://src/hud.gd" id="1_niwif"]
[ext_resource type="Theme" uid="uid://3mgf1on5qn1j" path="res://src/hud.tres" id="2_dbnox"]
[ext_resource type="Script" path="res://src/health_bar.gd" id="3_adgsp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_niwif")

[node name="Credits" type="CanvasLayer" parent="."]
visible = false

[node name="Credits" type="RichTextLabel" parent="Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -313.0
offset_right = 240.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
bbcode_enabled = true
text = "[center]
[font_size=24]Programming[/font_size]
Antonis Kalou

[font_size=24]Music[/font_size]
[url=https://fardifferent.itch.io/loops]FarDifferent - Loop Box #4[/url]

[font_size=24]Sound Effects[/font_size]
[url=https://freesound.org/people/NoiseCollector/]NoiseCollector[/url]

[font_size=24]Fonts[/font_size]
[url=https://fonts.google.com/specimen/Montserrat]Montserrat Free Fonts[/url]

[font_size=24]Icons[/font_size]
[url=https://game-icons.net/]Skoll - Game-Icons.net[/url]

[font_size=24]Graphics[/font_size]
Antonis Kalou
[url=https://ansimuz.itch.io/industrial-parallax-background]Ansimuz[/url]

[font_size=24]Special Thanks[/font_size]
Bassim Huis
[/center]"

[node name="MainMenu" type="Button" parent="Credits"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -71.0
offset_right = 98.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="GameTitle" type="Label" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -284.0
offset_right = 221.5
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 64
text = "Gravity Pong"

[node name="Options" type="VBoxContainer" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -87.0
offset_right = 116.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
theme_override_constants/separation = 10

[node name="SinglePlayer" type="Button" parent="MainMenu/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Single Player"

[node name="MultiPlayer" type="Button" parent="MainMenu/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Multi Player"

[node name="Credits" type="Button" parent="MainMenu/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Exit" type="Button" parent="MainMenu/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="MusicToggle" type="CheckButton" parent="MainMenu"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 94.0
grow_vertical = 0
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "Music"

[node name="SFXToggle" type="CheckButton" parent="MainMenu"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 98.0
offset_bottom = -31.0
grow_vertical = 0
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "SFX"

[node name="Controls" type="RichTextLabel" parent="MainMenu"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = -87.0
offset_right = 407.0
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("2_dbnox")
text = "CONTROLS

Player 1: Gamepad L-axis or A and D
Player 2: Left and right arrow"

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -135.0
offset_right = 206.5
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="Winner" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -31.0
offset_right = 206.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Player N Wins"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 48.0
offset_right = 105.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayAgain" type="Button" parent="GameOver/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Play Again?"

[node name="MainMenu" type="Button" parent="GameOver/Options"]
layout_mode = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Play" type="CanvasLayer" parent="."]
visible = false

[node name="HealthBar1" type="HBoxContainer" parent="Play"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_adgsp")
heartTexture = ExtResource("1_4fp27")
heartColor = Color(0.784314, 0, 0.27451, 1)

[node name="HealthBar2" type="HBoxContainer" parent="Play"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2
script = ExtResource("3_adgsp")
heartTexture = ExtResource("1_4fp27")
heartColor = Color(0.172549, 0.396078, 1, 1)

[node name="SpawnCountdown" type="Label" parent="Play"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dbnox")
theme_override_font_sizes/font_size = 32
text = "3.00"
horizontal_alignment = 1

[connection signal="pressed" from="Credits/MainMenu" to="." method="_on_credits_main_menu_pressed"]
[connection signal="pressed" from="MainMenu/Options/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MainMenu/Options/MultiPlayer" to="." method="_on_multi_player_pressed"]
[connection signal="pressed" from="MainMenu/Options/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenu/Options/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="MainMenu/MusicToggle" to="." method="_on_music_toggled"]
[connection signal="toggled" from="MainMenu/SFXToggle" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="GameOver/Options/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="GameOver/Options/MainMenu" to="." method="_on_main_menu_pressed"]
